# Cub3D

./: .gitignore  CMakeLists.txt  Makefile  Makefile.new  Makefile.txt  README.md  TEAM_CONFIG.md  back_makefile  cub.h  cub3D  cub3D.h  main.c  main.h  notes.txt  part01_parsing.md  part02_raycasting.md  subject_map.cub  test_correct_sound.cub
assets/: brick_wall.xpm  gimp_logo.xpm  parquet1.xpm  portalgun.xpm  shotgun_b.xpm  shotgun_c.xpm  sky_sun.xpm  terrain.xpm  warn_door.xpm  warn_door_wall.xpm
bass/: bass.h
bonus/: cub_other_bonus.c  cub_sound_bonus.c  cub_sound_bonus.h
delay/: libdelay.h
documentation/: DIAGRAMA_FLUJO_CUB3D.md  FLOWCHART_COMPLETO_CUB3D.md  UML_PARSEO_CUB3D.md  UML_RENDERIZADO_CUB3D.md  part01_parsing.md  part02_raycasting.md
include/: bmp_partial_alligned_header.h  constants.h  cub3d.h  cub_floor_render.h  cub_keybinds_struct.h  cub_mouseover_struct.h  cub_player_struct.h  cub_portal_struct.h  cub_raycast_struct.h  cub_sprite_struct.h  cub_sprite_type.h  cub_walls.h  includes_cub.h  types.h
includes/: cub3d.h  cub3d_utils.h  init.h  macros.h  parser.h
libft/: Makefile  ft_strcmp.c  get_next_line_utils.c  libft.h
maps/: demo.cub  level_bonus1.cub  level_bonus2.cub  matrix.cub
maps/correct_maps/: library.cub  matrix.cub
maps_and_textures/bonus/: level_bonus1.cub  level_bonus2_with_sound.cub  test_correct_sound.cub
maps_and_textures/correct_maps/: demo.cub  library.cub  map.cub  matrix.cub  test.cub  test_R.cub
maps_and_textures/invalid_maps/: empty.cub
maps_and_textures/textures/: greystone.xpm
mlx/: mlx.h
other/: cub_other.c  cub_sound.c
parser/: cub_file.c  cub_file.h  cub_map_parser.h  cub_map_setter.c  cub_map_setter.h  cub_parser.h  cub_setter.c  cub_setter.h
pathfinder/: cub_astar.h  cub_node.h  cub_node_helper.h  cub_path.h  cub_pathfinder.c  cub_pathfinder.h  cub_star_cardinal.c  cub_star_cardinal.h
render/: cub_bitmap.h  cub_blur.h  cub_floor.h  cub_hud.c  cub_hud.h  cub_minimap.c  cub_minimap.h  cub_raycast.c  cub_raycast.h  cub_raycast3.c  cub_texture.h  cub_xquartz_layer.c  cub_xquartz_layer.h
scripts/: dev.sh
sprites/: cub_doors.h  cub_goomba.c  cub_goomba.h  cub_sprite_list.c  cub_sprite_list.h  cub_sprites.h
srcs/: main.c
srcs/bass/: bass.h
srcs/delay/: libdelay.c  libdelay.h
srcs/file_loader/: check_file_map.c  check_file_map.h  file_loader_includes.h  load_file.c  load_file.h  load_file_helper.c  string_utils.c  string_utils.h
srcs/game/: game_collision.c  game_collision.h  game_directions.c  game_directions.h  game_map.c  game_map.h  game_player.c  game_player.h  game_portal.c  game_portal.h  game_portal_advance.c  game_portal_render.c  game_portal_render.h
srcs/game_sprites/: game_sprite_door.c  game_sprite_door.h  game_sprite_enemy.c  game_sprite_enemy.h  game_sprite_manager.c  game_sprite_manager.h  game_sprite_renderer.c  game_sprite_renderer.h
srcs/graphics/: color_operations.c  color_operations.h  graphics_includes.h  image_operations.c  image_operations.h  rendering_primitives.c  rendering_primitives.h
srcs/init/: init_mlx.c  init_parser.c  init_structs.c  print_structs.c
srcs/init_game/: error_handler.c  error_handler.h  init_game.c  init_game.h
srcs/input/: input_handler.c  input_handler.h
srcs/math/: math_includes.h  math_utils.c  math_utils.h  rotation_math.c  rotation_math.h  vector_math.c  vector_math.h  vector_math_utils.c
srcs/other/: cub_other.c  cub_sound.c  cub_sound.h
srcs/parser/: check_extension.c  check_items.c  check_map.c  check_player.c  cub_file.c  cub_file.h  cub_map_parser.c  cub_map_parser.h  cub_map_setter.c  cub_map_setter.h  cub_parser.c  cub_parser.h  cub_setter.c  cub_setter.h  free_functions.c  map_extension.c  parser_file_loader.c  parser_file_loader.h  parser_main.c  parser_main.h  parser_map_parser.c  parser_map_parser.h  parser_map_setter.c  parser_map_setter.h  parser_map_validator.c  parser_map_validator.h  parser_memory_cleanup.c  parser_memory_cleanup.h  parser_setter.c  parser_setter.h  print_errors.c
srcs/parser_file/: parse_file.c  parse_textures.c  parse_textures_utils.c  parse_utils.c  parsing_file.c  parsing_textures.c  parsing_utils.c
srcs/parser_map/: check_extension.c  check_extension_and_player.c  check_items.c  check_map.c  check_player.c  error_handler.c  extract_map.c  free_functions.c  map_utils.c  map_validation.c  map_validations_utils.c  parsing.c  print_errors.c
srcs/pathfinder/: cub_astar.c  cub_astar.h  cub_node.c  cub_node.h  cub_node_helper.c  cub_node_helper.h  cub_path.c  cub_path.h  cub_pathfinder.c  cub_pathfinder.h  cub_star_cardinal.c  cub_star_cardinal.h
srcs/render/: cub_bitmap.c  cub_blur.c  cub_blur.h  cub_floor.c  cub_hud.c  cub_hud.h  cub_minimap.c  cub_minimap.h  cub_raycast2.c  cub_texture.c  cub_xquartz_layer.c  cub_xquartz_layer.h  raycast_collision.c  raycast_dda.c  raycast_engine.c  raycast_engine.h  render_blur.c  render_blur.h  render_floor.c  render_floor.h  render_hud.c  render_hud.h  render_macos_layer.c  render_macos_layer.h  render_minimap.c  render_minimap.h  render_textures.c  render_textures.h
srcs/sound/: audio_system.c  audio_system.h  bonus_features.c
srcs/sprites/: cub_doors.c  cub_doors.h  cub_goomba.c  cub_goomba.h  cub_sprite_list.c  cub_sprite_list.h  cub_sprites.c  cub_sprites.h
srcs/utils/: cub_checker.c  cub_checker.h  cub_cleaner.c  cub_cleaner.h  cub_error.c  cub_error.h  cub_keybinds.c  cub_keybinds.h  (+15 more)
testing/: cub_cardinal_enum.h  cub_player_struct.h  cub_raycast_struct.h  cub_sprite_type.h  main.h  parser_map_parsing.c  setup_testing.c  test_main.c  testing.h  unity.c  unity.h  unity_internals.h
utils/: cub_checker.h  cub_cleaner.c  cub_cleaner.h  cub_error.c  cub_error.h  cub_keybinds.c  cub_keybinds.h  cub_line_reader.c  cub_line_reader.h  cub_line_reader_helper.c  cub_rot.h  cub_setup.c  cub_setup.h  cub_utils.c  cub_utils.h  cub_utils2.c  cub_utils3.c  cub_utils4.c  cub_utils5.c  cub_vec.h
world/: cub_cardinal.c  cub_cardinal.h  cub_map.c  cub_map.h  cub_player.c  cub_player.h  cub_portal.c  cub_portal.h  cub_portal_list.c  cub_portal_list.h
(+30 files in other folders)
